samples/test2.out

*** Error line 4.
	if(a > b > c)
                 ^
*** syntax error

