samples/test2.decaf
void myFunc()
{
	a = b = c;
	if(a > b > c)
	{
		Print("Testing");
	}
}